--- a/src/Components/Cart/CartSidebar.css
+++ b/src/Components/Cart/CartSidebar.css
@@ -7,6 +7,9 @@
     height: 90vh;
     overflow-x: hidden;
 }
+.cartSidebar.hidden{
+    display: none;
+}
 .cartItems button{
     height: 18px;
     width: 18px;
